--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 
   </head>
   <body>
-    <app-root></app-root> 
+    <app-root></app-root>
+    <app-assisted></app-assisted> 
   </body>
 </html>
