--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <app-root></app-root>
-    <app-assisted></app-assisted> 
+    <app-assisted></app-assisted>
+    <app-volunteering-domain></app-volunteering-domain>
   </body>
 </html>
